# mpd-httpd

./: .gitignore  meson.build
src/: main.c  main.cpp  mpd.cpp  mpd.h
subprojects/: crow.wrap  facil.wrap
